save requirements fixed

--- a/src/main/resources/templates/Events.html
+++ b/src/main/resources/templates/Events.html
@@ -440,7 +440,7 @@
                                     </div>
                                     <div id="edit_appoitmentBtns" class="row">
                                         <div class="col-auto">
-                                            <button type="button" class="icon-btn save" onclick="edit_caveAppointment()">✓</button>
+                                            <button type="button" class="icon-btn save" onclick="edit_saveAppointment()">✓</button>
                                         </div>
                                         <div class="col-auto">
                                             <button type="button" class="icon-btn cancel" onclick="edit_cancelAppointment()">✕</button>
