Cancellation Deadline für Event erstellt (Front + Backend)

--- a/src/main/resources/templates/Homepage.html
+++ b/src/main/resources/templates/Homepage.html
@@ -133,7 +133,15 @@
                                     </div>
                                 </div>
                             </div>
-
+                            <div class="row">
+                                <div class="col-md-6 mb-3">
+                                    <label>Cancellation Deadline</label>
+                                    <input type="date" id="cancelDeadline" class="form-control" required>
+                                    <div class="invalid-feedback">
+                                        Cancellation Deadline is required and must be earlier than start date.
+                                    </div>
+                                </div>
+                            </div>
                             <!-- Price & Category -->
                             <div class="row">
                                 <div class="col-md-6 mb-3">
