--- a/src/main/resources/templates/Bookings.html
+++ b/src/main/resources/templates/Bookings.html
@@ -133,10 +133,6 @@
                                 <span class="info-label">Address:</span>
                                 <span class="info-value d-address"></span>
                             </div>
-                            <div class="d-cancelreason" style="display:none;">
-                                <span class="info-label">Cancellation Reason:</span>
-                                <span class="info-value"></span>
-                            </div>
                         </div>
                         <div class="col-md-6 booking-section">
                             <h6 class="text-muted mb-4">BOOKING INFORMATION</h6>
@@ -159,6 +155,14 @@
                             <div class="info-row">
                                 <span class="info-label">Status:</span>
                                 <span class="d-status badge"></span>
+                            </div>
+                            <div class="d-cancelReason" style="display:none;">
+                                <span class="info-label">Cancellation Reason:</span>
+                                <span class="info-value"></span>
+                            </div>
+                            <div class="d-cancelDate" style="display:none;">
+                                <span class="info-label">Cancellation Date:</span>
+                                <span class="info-value"></span>
                             </div>
                         </div>
                     </div>
