--- a/src/main/resources/templates/Homepage.html
+++ b/src/main/resources/templates/Homepage.html
@@ -136,10 +136,7 @@
                             <div class="row">
                                 <div class="col-md-6 mb-3">
                                     <label>Cancellation Deadline</label>
-                                    <input type="date" id="cancelDeadline" class="form-control" required>
-                                    <div class="invalid-feedback">
-                                        Cancellation Deadline is required and must be earlier than start date.
-                                    </div>
+                                    <input type="date" id="cancelDeadline" class="form-control">
                                 </div>
                             </div>
                             <!-- Price & Category -->
