Refund Anzeige Frontend, bugs gelöst

--- a/src/main/resources/templates/Bookings.html
+++ b/src/main/resources/templates/Bookings.html
@@ -156,11 +156,15 @@
                                 <span class="info-label">Status:</span>
                                 <span class="d-status badge"></span>
                             </div>
-                            <div class="d-cancelReason" style="display:none;">
+                            <div class="d-cancelDeadline info-row">
+                                <span class="info-label">Cancellation Deadline:</span>
+                                <span class="info-value"></span>
+                            </div>
+                            <div class="d-cancelReason info-row" style="display:none;">
                                 <span class="info-label">Cancellation Reason:</span>
                                 <span class="info-value"></span>
                             </div>
-                            <div class="d-cancelDate" style="display:none;">
+                            <div class="d-cancelDate info-row" style="display:none;">
                                 <span class="info-label">Cancellation Date:</span>
                                 <span class="info-value"></span>
                             </div>
