Refund alert style

--- a/src/main/resources/templates/Bookings.html
+++ b/src/main/resources/templates/Bookings.html
@@ -194,12 +194,8 @@
                         <p>Please provide a reason for cancellation:</p>
                         <textarea name="cancellationReason" class="form-control cancellationReason" rows="3" required></textarea>
                     </div>
-                    <div>
-                        <span id="calculateRefund">
-
-                        </span>
-                    </div>
                     <div class="modal-footer">
+                         <span id="calculateRefund" class="alert alert-warning"></span>
                         <button type="submit" class="btn btn-danger">Confirm</button>
                     </div>
                 </form>
