user bugs new changes but not done yet

--- a/src/main/resources/templates/Bookings.html
+++ b/src/main/resources/templates/Bookings.html
@@ -205,6 +205,7 @@
     </div>
 </template>
 
+<script src="/js/session.js"></script>
 <script src="/js/loginUserIcon.js"></script>
 <script src="/js/toast.js"></script>
 <script src="/js/bookingApi.js"></script>
