--- a/src/main/resources/templates/Events.html
+++ b/src/main/resources/templates/Events.html
@@ -826,6 +826,7 @@
     </div>
 </div>
 
+<script src="/js/session.js"></script>
 <script src="/js/loginUserIcon.js"></script>
 <script src="/js/toast.js"></script>
 <script src="/js/eventSearch.js"></script>
