--- a/src/main/resources/templates/Profile.html
+++ b/src/main/resources/templates/Profile.html
@@ -102,7 +102,7 @@
     </div>
 </div>
 
-<!-- WICHTIG: Dieses Script hinzufügen -->
+<script src="/js/session.js"></script>
 <script src="/js/loginUserIcon.js"></script>
 <script src="/js/toast.js"></script>
 <script src="/js/profileApi.js"></script>
