--- a/src/main/resources/templates/User.html
+++ b/src/main/resources/templates/User.html
@@ -138,6 +138,7 @@
     </div>
 </div>
 
+<script src="/js/session.js"></script>
 <script src="/js/loginUserIcon.js"></script>
 <script src="/js/toast.js"></script>
 <script src="/js/userApi.js?v=1"></script>
