--- a/src/main/resources/templates/Admin.html
+++ b/src/main/resources/templates/Admin.html
@@ -67,6 +67,7 @@
     </div>
 </div>
 
+<script src="/js/session.js"></script>
 <script src="/js/loginUserIcon.js"></script>
 <script src="/js/toast.js"></script>
 <script src="/js/admin.js"></script>
