--- a/src/main/resources/templates/Homepage.html
+++ b/src/main/resources/templates/Homepage.html
@@ -409,6 +409,7 @@
     </div>
 </div>
 
+<script src="/js/session.js"></script>
 <script src="/js/loginUserIcon.js"></script>
 <script src="/js/homepageApi.js"></script>
 <script src="/js/toast.js?v=1"></script>
