user bugs fixed

--- a/src/main/resources/templates/Homepage.html
+++ b/src/main/resources/templates/Homepage.html
@@ -72,7 +72,7 @@
         </label>
         <br><br>
         <!-- Create Event Button -->
-        <button type="button" id="createEventButton" class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#createEventModal">
+        <button type="button" id="createEventButton" class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#createEventModal" style="display: none;">
             Create New Event
         </button>
     </div>
