--- a/src/main/resources/static/css/toast.css
+++ b/src/main/resources/static/css/toast.css
@@ -44,6 +44,11 @@
     color: white;
 }
 
+.toast.toast-info .toast-header{
+    background-color: #0dcaf0;
+    color: white;
+}
+
 /* Toast Header */
 .toast-header {
     font-weight: 600;
@@ -88,6 +93,10 @@
 
 .toast.toast-error .toast-body {
     background-color: #f8d7da;
+}
+
+.toast.toast-info .toast-body {
+    background-color: #afe2ec;
 }
 
 /* Animations */
